  - lms-sendinvoices: added smtp_host option and errors printing for
    problems with http or smtp connection (alec)
  - increased node/IP name length limit to 32 characters (alec)
  - added section filter on UI Configuration (alec)
  - fixed name of to_words_short_version option in documentation (alec)
  - added user's position field (alec)

version 1.11.0 Thoth (2007-08-17):

  - common pdf functions and initialization moved to lib/pdf.php (alec)
  - lms-reminder: BTS#0000670 - fixed query (alec)
  - Excluded groups - possibility to disable user access to specified
    customers groups (alec)
    *****************************************************************
  - PostgreSQL 8.1 is required now (alec)
	!!!! postgresql.conf: custom_variable_classes = 'lms'
    *****************************************************************
  - cash import: when customer is known don't show selection field,
    added $modvalue configuration variable, code cleanup, transactions
    support (alec)
  - when customer wasn't found in quick customer search do redirect to 
    customer search module with filled zip and city fields  (alec)
  - fixed few problems with apostrophe sign in tariffs names (alec)
  - optimized query speed of cash registries list (alec)
  - access rights: added 'customers group management' privilage (alec)
  - lmsd/payments: added %month and %year variables for comment (alec)
  - cash receipts: BTS#0000673 - cash receipts of type 'other' and
    'advance' included in balance sheet (alec)
  - customers list: fixed sorting by balance when balance is NULL 
    (customers without cash operations) (alec)
  - added transactions for deleting (customer, node, etc.) 
    operations (alec)
  - tariffs: fixed data limit feature (alec)    

version 1.9.8 Idos (2007-07-12):

  - changed DB driver version format (alec)
  - lmsd: added %i16 variable for IP's last octet heximal representation
    in tc/tc-ng and %i16 and %i16pub in hostfile module (alec) 