@@ -45,6 +45,8 @@ version ? (????-??-??):
   - added section filter on UI Configuration (alec)
   - fixed name of to_words_short_version option in documentation (alec)
   - added user's position field (alec)
+  - optimized Invoices List sql query (25% faster) (alec)
+  - Cash Import: added support for many import patterns, added 'use_line_hash' (alec)
 
 version 1.11.0 Thoth (2007-08-17):
 
